@@ -1,4 +1,6 @@
 
+- Passthrug extra HTTP header with the 'head' request arg.
+
 0.01: # 2013-11-24T01:49:08+0100
 - Initial Release, with all wanted features are implemented.
 
